syntax = "proto3";
package neighbors;

// [DART-SIGNAL]
message StartBroadcastRequest {
  uint32 duration_seconds = 1;
  string alias = 2;
  string fingerprint = 3;
}

// [DART-SIGNAL]
message StartListeningRequest {
  string alias = 1;
  string fingerprint = 2;
}

// [DART-SIGNAL]
message StopBroadcastRequest {}

// [DART-SIGNAL]
message StopListeningRequest {}

// [RUST-SIGNAL]
message DiscoveredDeviceMessage {
  string alias = 1;
  string device_model = 2;
  string device_type = 3;
  string fingerprint = 4;
  int64 last_seen_unix_epoch = 5;
}
